Remove sales channel and fix add order bug

--- a/src/views/dashboard.default.inventory.track.html
+++ b/src/views/dashboard.default.inventory.track.html
@@ -28,7 +28,7 @@
   </div>
   <div class="modal-footer">
     <button class="btn-status-default" type="button" ng-disabled="blocks.length==0" ng-click="moveBlock()">Move</button>
-    <button class="btn-status-default" type="button" ng-disabled="blocks.length==0" ng-click="moveBlockToSales()">Move to Sales</button>
+    <!-- <button class="btn-status-default" type="button" ng-disabled="blocks.length==0" ng-click="moveBlockToSales()">Move to Sales</button> -->
     <button class="btn-status-default" type="button" ng-disabled="blocks.length==0" ng-click="viewDetails()">Batch Detail</button>
     <button class="btn-status-default" type="button" ng-disabled="blocks.length==0" ng-click="editBlock()">Edit</button>
     <button class="btn-status-success" type="button" ng-click="addBlock()">Add</button>
