--- a/src/views/dashboard.default.supply-chain.builder.html
+++ b/src/views/dashboard.default.supply-chain.builder.html
@@ -8,9 +8,11 @@ $btn-success-hover-color;<div ng-controller="SupplyChainDisplayCtrl">
             <div class="panel panel-default">
               <div class="panel-body">
                 <button ng-click="addStage()" class="btn-status-success">Add</button>
-                <button ng-disabled="isNodeSelected()" ng-click="editStage()" class="btn-status-default">Edit</button>
+                <!-- <button ng-disabled="noNodeSelected" ng-click="editStage()" class="btn-status-default">Edit</button> -->
+                <button ng-click="editStage()" class="btn-status-default">Edit</button>
                 <button ng-click="linkStages()" class="btn-status-default">Link</button>
                 <button ng-click="unlinkStages()" class="btn-status-default">Unlink</button>
+                <!-- <button ng-disabled="noNodeSelected" ng-click="deleteStage()" class="btn-status-danger">Delete</button> -->
                 <button ng-click="deleteStage()" class="btn-status-danger">Delete</button>
                 <button ng-click="saveSupplyChain()" class="btn-status-success">Save</button>
               </div>
@@ -48,6 +50,18 @@ $btn-success-hover-color;<div ng-controller="SupplyChainDisplayCtrl">
           </select>
         </div>
       </fieldset>
+      <fieldset class="form-group">
+        <div class="col-lg-6">
+          <!-- <label>Sales Channel</label> -->
+          <label>
+            <input type="checkbox" ng-model="isSellingPoint"> Sales Channel</label>
+        </div>
+        <!-- <div class="col-lg-6">
+          <label>Display on E-commerce</label>
+          <input class="form-control" ng-model="isEcommerce" type="checkbox">
+          </select>
+        </div> -->
+      </fieldset>
     </form>
   </div>
   <div class="modal-footer">
@@ -68,6 +82,18 @@ $btn-success-hover-color;<div ng-controller="SupplyChainDisplayCtrl">
         <label>New Name</label>
         <input class="form-control" ng-model="name" maxlength="25" placeholder="i.e. Processing Plant 1">
         <small class="text-muted">Maximum 30 characters.</small>
+      </fieldset>
+      <fieldset class="form-group">
+          <div class="col-lg-6">
+            <!-- <label>Sales Channel</label> -->
+            <label>
+              <input type="checkbox" ng-model="isSellingPoint"> Sales Channel</label>
+          </div>
+        <!-- <div class="col-lg-6">
+          <label>Display on E-commerce</label>
+          <input class="form-control" ng-model="isEcommerce" type="checkbox">
+          </select>
+        </div> -->
       </fieldset>
     </form>
   </div>
