--- a/src/views/dashboard.default.orders.menu.html
+++ b/src/views/dashboard.default.orders.menu.html
@@ -214,10 +214,9 @@
             <small class="text-muted">Maximum 10 characters</small>
           </div>
           <div class="col-lg-4">
-            <label>Payment Method &nbsp;
-              <span class="input-required" ng-show="paymentRequired"> * Required</span>
+            <label>Payment Method
             </label>
-            <select ng-model="paymentMethod" class="form-control" name="payment" required>
+            <select ng-model="paymentMethod" class="form-control" name="payment">
               <option value="Cash">Cash</option>
               <option value="Cheque">Cheque</option>
               <option value="Credit">Credit</option>
