Comment out delete

--- a/src/views/dashboard.default.products.html
+++ b/src/views/dashboard.default.products.html
@@ -9,7 +9,7 @@
               <div class="panel-body">
                 <button ng-click="addProduct()" class="btn-status-success">Add</button>
                 <!-- <button ng-click="editProduct()" class="btn-status-default">Edit</button> -->
-                <button ng-click="deleteProduct(product._id)" class="btn-status-danger">Delete</button>
+                <!-- <button ng-click="deleteProduct(product._id)" class="btn-status-danger">Delete</button> -->
               </div>
             </div>
             <div class="panel panel-default">
