minor validation added for all

--- a/src/views/forgot-password.html
+++ b/src/views/forgot-password.html
@@ -8,6 +8,10 @@
           </div>
           <div class="panel-body">
             <form role="form" ng-controller="loginCtrl" ng-submit="sendResetLink()">
+              <div class="panel-login-body">
+                <div class="panel-login-error" ng-show="usernameRequired">
+                  <p class="text-center">The credentials below are incorrect. Please try again.</p>
+                </div><br>
               <fieldset>
                 <div class="form-group">
                   <input type="name" class="form-control" id="name" ng-model="username" placeholder="coastalfishery" autofocus>
@@ -21,6 +25,7 @@
             </form>
           </div>
         </div>
+      </div>
       </div>
     </div>
   </div>
