--- a/src/views/sign-up-code.html
+++ b/src/views/sign-up-code.html
@@ -1,38 +1,45 @@
 <div class="login-body">
- <div class="container">
-   <div class="row">
-     <div class="col-md-5 col-centered">
-       <div class="panel-login panel panel-default">
-         <div class="panel-heading">
-           <h4 class="panel-title">Login</h4>
-         </div>
-         <div class="panel-body">
-           <form role="form" ng-controller="loginCtrl" ng-submit="signUpWithCode()">
-             <fieldset>
-                 <label>Username</label>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-5 col-centered">
+        <div class="panel-login panel panel-default">
+          <div class="panel-heading">
+            <h4 class="panel-title">Login</h4>
+          </div>
+          <div class="panel-body">
+            <form role="form" ng-controller="loginCtrl" ng-submit="signUpWithCode()">
+              <div class="panel-login-body">
+                <div class="panel-login-error" ng-show="usernameRequired || passwordRequired ||emailRequired || accountTypeRequired">
+                  <p class="text-center">The credentials below are incorrect. Please try again.</p>
+                </div>
+                <br>
+                <fieldset>
+                  <label>Username</label>
+                  <div class="form-group">
+                    <input type="username" class="form-control" ng-model="username" placeholder="Your username" autofocus>
+                  </div>
 
-               <div class="form-group">
-                 <input type="username" class="form-control" ng-model="username" placeholder="Your username" autofocus>
-               </div>
+                  <label>Password</label>
+                  <div class="form-group">
+                    <input type="password" class="form-control" ng-model="password" placeholder="Make it secure" autofocus>
+                  </div>
 
-               <label>Password</label>
-               <div class="form-group">
-                 <input type="password" class="form-control" ng-model="password" placeholder="Make it secure" autofocus>
-               </div>
+                  <label>Invite Code</label>
+                  <div class="form-group">
+                    <input type="username" class="form-control" ng-model="inviteCode" placeholder="Code from email" autofocus>
+                  </div>
 
-               <label>Invite Code</label>
-               <div class="form-group">
-                 <input type="username" class="form-control" ng-model="inviteCode" placeholder="Code from email" autofocus>
-               </div>
-
-               <!-- Change this to a button or input when using this as a form -->
-               <center><button type="submit" class="btn-status-success">Login</button></center>
-               <!-- <a href="index.html" class="btn btn-lg btn-success btn-block">Login</a> -->
-             </fieldset>
-           </form>
-         </div>
-       </div>
-     </div>
-   </div>
- </div>
+                  <!-- Change this to a button or input when using this as a form -->
+                  <center>
+                    <button type="submit" class="btn-status-success">Login</button>
+                  </center>
+                  <!-- <a href="index.html" class="btn btn-lg btn-success btn-block">Login</a> -->
+                </fieldset>
+            </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
