--- a/src/views/dashboard.default.sales-management.track.html
+++ b/src/views/dashboard.default.sales-management.track.html
@@ -58,7 +58,7 @@
     <form>
       <fieldset class="form-group">
         <label>Name</label>
-        <input class="form-control" ng-model="name" maxlength="45" placeholder="Name of sales channel...">
+        <input class="form-control" ng-model="name" placeholder="Name of sales channel...">
         <small class="text-muted">Maximum 45 characters.</small>
         <br>
         <div class="checkbox">
@@ -84,7 +84,7 @@
     <form>
       <fieldset class="form-group">
         <label>New Selling Point Name</label>
-        <input class="form-control" ng-model="sellingPoint.name" maxlength="45" placeholder="Name of sales channel...">
+        <input class="form-control" ng-model="sellingPoint.name" placeholder="Name of sales channel...">
         <small class="text-muted">Maximum 45 characters.</small>
         <div class="checkbox">
           <label>
