--- a/src/views/dashboard.default.supply-chain.menu.html
+++ b/src/views/dashboard.default.supply-chain.menu.html
@@ -58,7 +58,7 @@
     <form>
       <fieldset class="form-group">
         <label>New Name</label>
-        <input class="form-control" ng-model="supplyChain.name" maxlength="25" placeholder="i.e. Supply Chain 1">
+        <input class="form-control" ng-model="supplyChain.name" placeholder="i.e. Supply Chain 1">
         <small class="text-muted">Maximum 30 characters.</small>
       </fieldset>
     </form>
