--- a/src/views/dashboard.default.orders.menu.html
+++ b/src/views/dashboard.default.orders.menu.html
@@ -137,7 +137,7 @@
             <label>Customer Name &nbsp;
               <span class="input-required" ng-show="nameRequired"> * Required</span>
             </label>
-            <input class="form-control" type="text" maxlength="30" ng-model="customerName" name="name" placeholder="ex. John Doe" required>
+            <input class="form-control" type="text" ng-model="customerName" name="name" placeholder="ex. John Doe" required>
             <small class="text-muted">Maximum 30 characters</small>
           </div>
 
@@ -191,16 +191,20 @@
             </select>
           </div>
           <div class="col-lg-4">
-            <label>State/Province &nbsp;<span ng-show="stateRequired" class="input-required"> * Required</span></label>
-            <input class="form-control" name="state"  type="text" ng-model="state" placeholder="ex. Michigan" required>
+            <label>State/Province &nbsp;
+              <span ng-show="stateRequired" class="input-required"> * Required</span>
+            </label>
+            <input class="form-control" name="state" type="text" ng-model="state" placeholder="ex. Michigan" required>
             <!-- <small class="text-muted">Maximum 30 characters</small> -->
           </div>
 
         </fieldset>
-        <fieldset>          <div class="col-lg-12">
-                    <label>Notes</label>
-                    <textarea class="form-control" ng-model="notes" type="text" placeholder="ex. Deliver to back door" name="notes"></textarea>
-                </div></fieldset>
+        <fieldset>
+          <div class="col-lg-12">
+            <label>Notes</label>
+            <textarea class="form-control" ng-model="notes" type="text" placeholder="ex. Deliver to back door" name="notes"></textarea>
+          </div>
+        </fieldset>
       </div>
 
 
@@ -210,7 +214,7 @@
             <label>Invoice Number &nbsp;
               <span class="input-required" ng-show="invoiceRequired"> * Required</span>
             </label>
-            <input class="form-control" maxlength="10" ng-model="invoiceNumber" type="text" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 34937" name="invoice" required></input>
+            <input class="form-control" ng-model="invoiceNumber" type="text" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 34937" name="invoice" required></input>
             <small class="text-muted">Maximum 10 characters</small>
           </div>
           <div class="col-lg-4">
@@ -281,8 +285,10 @@
               <th>Product</th>
               <th>Finished Good</th>
               <th>Batch</th>
-              <th>Unit Price<br>($/{{selectedBlock.units}})</th>
-              <th>Quantity<br>(Max: {{selectedBlock.quantity + " " + selectedBlock.units}})</th>
+              <th>Unit Price
+                <br>($/{{selectedBlock.units}})</th>
+              <th>Quantity
+                <br>(Max: {{selectedBlock.quantity + " " + selectedBlock.units}})</th>
               <th>Tax Rate (%)</th>
               <th>&nbsp;
                 <span class="input-required" ng-show="tableRequired"> *</span>&nbsp;</th>
@@ -302,12 +308,12 @@
 
             </tr>
             <tr>
-                <td data-label="Sourced Product">
-                  <select class="form-control" ng-model="selectedSourcedProduct" ng-options="sourcedProduct.name for sourcedProduct in sourcedProducts"></select>
-                </td>
+              <td data-label="Sourced Product">
+                <select class="form-control" ng-model="selectedSourcedProduct" ng-options="sourcedProduct.name for sourcedProduct in sourcedProducts"></select>
+              </td>
 
               <td data-label="Product">
-                  <select class="form-control" ng-model="selectedFinishedProduct" ng-options="finishedProduct.name for finishedProduct in finishedProducts" ng-disabled="!selectedSourcedProduct"></select>
+                <select class="form-control" ng-model="selectedFinishedProduct" ng-options="finishedProduct.name for finishedProduct in finishedProducts" ng-disabled="!selectedSourcedProduct"></select>
               </td>
 
               <td data-label="Choose Batch">
@@ -323,7 +329,7 @@
               </td>
 
               <td data-label="Tax">
-                <input class="form-control" maxlength="10" min="0" ng-model="taxRate" type="number" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 13"></input>
+                <input class="form-control" min="0" ng-model="taxRate" type="number" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 13"></input>
               </td>
 
               <td data-label="Add Entry">
@@ -367,7 +373,7 @@
             <label>Customer Name &nbsp;
               <span class="input-required" ng-show="nameRequired"> * Required</span>
             </label>
-            <input class="form-control" type="text" maxlength="30" ng-model="customerName" name="name" placeholder="ex. John Doe" required>
+            <input class="form-control" type="text" ng-model="customerName" name="name" placeholder="ex. John Doe" required>
             <small class="text-muted">Maximum 30 characters</small>
           </div>
 
@@ -421,16 +427,20 @@
             </select>
           </div>
           <div class="col-lg-4">
-            <label>State/Province &nbsp;<span ng-show="stateRequired" class="input-required"> * Required</span></label>
-            <input class="form-control" name="state"  type="text" ng-model="state" placeholder="ex. Michigan" required>
+            <label>State/Province &nbsp;
+              <span ng-show="stateRequired" class="input-required"> * Required</span>
+            </label>
+            <input class="form-control" name="state" type="text" ng-model="state" placeholder="ex. Michigan" required>
             <!-- <small class="text-muted">Maximum 30 characters</small> -->
           </div>
 
         </fieldset>
-        <fieldset>          <div class="col-lg-12">
-                    <label>Notes</label>
-                    <textarea class="form-control" ng-model="notes" type="text" placeholder="ex. Deliver to back door" name="notes"></textarea>
-                </div></fieldset>
+        <fieldset>
+          <div class="col-lg-12">
+            <label>Notes</label>
+            <textarea class="form-control" ng-model="notes" type="text" placeholder="ex. Deliver to back door" name="notes"></textarea>
+          </div>
+        </fieldset>
       </div>
 
 
@@ -440,7 +450,7 @@
             <label>Invoice Number &nbsp;
               <span class="input-required" ng-show="invoiceRequired"> * Required</span>
             </label>
-            <input class="form-control" maxlength="10" ng-model="invoiceNumber" type="text" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 34937" name="invoice" required></input>
+            <input class="form-control" ng-model="invoiceNumber" type="text" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 34937" name="invoice" required></input>
             <small class="text-muted">Maximum 10 characters</small>
           </div>
           <div class="col-lg-4">
@@ -537,10 +547,10 @@
 
       </fieldset>
       <fieldset class="form-group">
-          <div class="col-lg-4">
-            <label>Invoice Number</label>
-            <input class="form-control" ng-model="invoiceNumber" type="text" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 34937"></input>
-          </div>
+        <div class="col-lg-4">
+          <label>Invoice Number</label>
+          <input class="form-control" ng-model="invoiceNumber" type="text" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 34937"></input>
+        </div>
         <div class="col-lg-4">
           <label>Payment Method</label>
           <select ng-model="paymentMethod" class="form-control">
@@ -563,10 +573,10 @@
 
       </fieldset>
       <fieldset class="form-group">
-          <div class="col-lg-6">
-            <label>Date Range - From:</label>
-            <input class="form-control" type="date" ng-model="dateStart" placeholder="2016-01-12">
-          </div>
+        <div class="col-lg-6">
+          <label>Date Range - From:</label>
+          <input class="form-control" type="date" ng-model="dateStart" placeholder="2016-01-12">
+        </div>
         <div class="col-lg-6">
           <label>Date Range - To:</label>
           <input class="form-control" type="date" ng-model="dateEnd" placeholder="2016-01-14">
