--- a/src/views/dashboard.default.supply-chain.builder.html
+++ b/src/views/dashboard.default.supply-chain.builder.html
@@ -39,7 +39,7 @@ $btn-success-hover-color;<div ng-controller="SupplyChainDisplayCtrl">
       <fieldset class="form-group">
         <div class="col-lg-12">
           <label>Name of Supply Chain Stage</label>
-          <input class="form-control" ng-model="name" maxlength="25" placeholder="i.e. Processing Plant 1">
+          <input class="form-control" ng-model="name" placeholder="i.e. Processing Plant 1">
           <small class="text-muted">Maximum 25 characters.</small>
         </div>
       </fieldset>
@@ -80,7 +80,7 @@ $btn-success-hover-color;<div ng-controller="SupplyChainDisplayCtrl">
     <form>
       <fieldset class="form-group">
         <label>New Name</label>
-        <input class="form-control" ng-model="name" maxlength="25" placeholder="i.e. Processing Plant 1">
+        <input class="form-control" ng-model="name" placeholder="i.e. Processing Plant 1">
         <small class="text-muted">Maximum 30 characters.</small>
       </fieldset>
       <fieldset class="form-group">
