finishedGood bug fixed

--- a/src/views/dashboard.default.products.html
+++ b/src/views/dashboard.default.products.html
@@ -57,7 +57,7 @@
           <label>Product Name &nbsp;
             <span ng-show="productRequired" class="input-required"> * Required</span>
           </label>
-          <input class="form-control" name="name" ng-model="name" maxlength="45" placeholder="ex. Atlantic Cod">
+          <input class="form-control" name="name" ng-model="name" placeholder="ex. Atlantic Cod">
           <small class="text-muted">Please enter the product name.</small>
         </div>
         <div class="col-lg-6">
@@ -103,7 +103,7 @@
       <fieldset class="form-group">
         <div class="col-lg-6">
           <label>Description</label>
-          <input class="form-control" ng-model="description" maxlength="45" placeholder="Enter a short product description">
+          <input class="form-control" ng-model="description" placeholder="Enter a short product description">
           <small class="text-muted">Maximum 45 characters</small>
         </div>
       </fieldset>
@@ -130,7 +130,7 @@
           <label>Product Name &nbsp;
             <span ng-show="productRequired" class="input-required"> * Required</span>
           </label>
-          <input class="form-control" name="name" ng-model="name" maxlength="45" placeholder="ex. Atlantic Cod" required='true'>
+          <input class="form-control" name="name" ng-model="name"  placeholder="ex. Atlantic Cod" required='true'>
           <small class="text-muted">Please enter the product name.</small>
         </div>
 
@@ -149,7 +149,7 @@
       <fieldset class="form-group">
         <div class="col-lg-12">
           <label>Description</label>
-          <input class="form-control" ng-model="description" maxlength="45" placeholder="Enter a short product description">
+          <input class="form-control" ng-model="description" placeholder="Enter a short product description">
           <small class="text-muted">Maximum 45 characters</small>
         </div>
       </fieldset>
@@ -157,7 +157,7 @@
       <fieldset class="form-group">
         <div class="col-lg-12">
           <label>Product Number</label>
-          <input class="form-control" ng-model="finishedProductNumber" maxlength="45" placeholder="Custom product number (ex. UPC, SKU)">
+          <input class="form-control" ng-model="finishedProductNumber"  placeholder="Custom product number (ex. UPC, SKU)">
           <small class="text-muted">Maximum 45 characters</small>
         </div>
       </fieldset>
@@ -182,7 +182,7 @@
       <fieldset class="form-group">
         <div class="col-lg-6">
           <label>Product Name</label>
-          <input class="form-control" ng-model="name" maxlength="25" placeholder="ex. Atlantic Cod">
+          <input class="form-control" ng-model="name" placeholder="ex. Atlantic Cod">
           <small class="text-muted">Maximum 25 characters.</small>
         </div>
         <div class="col-lg-6">
@@ -212,7 +212,7 @@
       <fieldset class="form-group">
         <div class="col-lg-12">
           <label>Description</label>
-          <input class="form-control" ng-model="description" maxlength="60" placeholder="Enter a short product description">
+          <input class="form-control" ng-model="description" placeholder="Enter a short product description">
           <small class="text-muted">Maximum 60 characters</small>
         </div>
       </fieldset>
@@ -237,7 +237,7 @@
       <fieldset class="form-group">
         <div class="col-lg-6">
           <label>UPC Code</label>
-          <input class="form-control" ng-model="name" maxlength="25" placeholder="ex. Atlantic Cod">
+          <input class="form-control" ng-model="name" placeholder="ex. Atlantic Cod">
           <small class="text-muted">Maximum 25 characters.</small>
         </div>
         <div class="col-lg-6">
@@ -267,7 +267,7 @@
       <fieldset class="form-group">
         <div class="col-lg-12">
           <label>Description</label>
-          <input class="form-control" ng-model="description" maxlength="60" placeholder="Enter a short product description">
+          <input class="form-control" ng-model="description" placeholder="Enter a short product description">
           <small class="text-muted">Maximum 60 characters</small>
         </div>
       </fieldset>
