--- a/src/views/dashboard.default.customers.profile.html
+++ b/src/views/dashboard.default.customers.profile.html
@@ -57,7 +57,7 @@
       <fieldset class="form-group">
         <div class="col-lg-6">
           <label>Customer Name</label>
-          <input class="form-control" type="text" maxlength="30" ng-model="customerName" placeholder="ex. John Doe">
+          <input class="form-control" type="text" ng-model="customerName" placeholder="ex. John Doe">
           <small class="text-muted">Maximum 30 characters</small>
         </div>
         <div class="col-lg-6">
@@ -69,7 +69,7 @@
       <fieldset class="form-group">
         <div class="col-lg-4">
           <label>Invoice Number</label>
-          <input class="form-control" maxlength="10" ng-model="invoiceNumber" type="text" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 34937"></input>
+          <input class="form-control" ng-model="invoiceNumber" type="text" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 34937"></input>
           <small class="text-muted">Maximum 10 characters</small>
         </div>
         <div class="col-lg-4">
@@ -123,7 +123,7 @@
         </div>
         <div class="col-lg-6">
           <label>Tax Rate</label>
-          <input class="form-control" maxlength="10" min="0" ng-model="taxRate" type="number" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 13"></input>
+          <input class="form-control"  min="0" ng-model="taxRate" type="number" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 13"></input>
           <small class="text-muted">[Optional] Please enter the tax rate as a percentage.</small>
         </div>
       </fieldset>
