--- a/src/views/dashboard.default.orders.menu.html
+++ b/src/views/dashboard.default.orders.menu.html
@@ -134,7 +134,7 @@
             <label>Customer Name &nbsp;
               <span class="input-required" ng-show="nameRequired"> * Required</span>
             </label>
-            <input class="form-control" type="text" maxlength="30" ng-model="customerName" name="name" placeholder="ex. John Doe" required>
+            <input class="form-control" type="text"  ng-model="customerName" name="name" placeholder="ex. John Doe" required>
             <small class="text-muted">Maximum 30 characters</small>
           </div>
 
@@ -207,7 +207,7 @@
             <label>Invoice Number &nbsp;
               <span class="input-required" ng-show="invoiceRequired"> * Required</span>
             </label>
-            <input class="form-control" maxlength="10" ng-model="invoiceNumber" type="text" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 34937" name="invoice" required></input>
+            <input class="form-control" ng-model="invoiceNumber" type="text" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 34937" name="invoice" required></input>
             <small class="text-muted">Maximum 10 characters</small>
           </div>
           <div class="col-lg-4">
@@ -320,7 +320,7 @@
               </td>
 
               <td data-label="Tax">
-                <input class="form-control" maxlength="10" min="0" ng-model="taxRate" type="number" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 13"></input>
+                <input class="form-control" min="0" ng-model="taxRate" type="number" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 13"></input>
               </td>
 
               <td data-label="Add Entry">
@@ -365,7 +365,7 @@
             <label>Customer Name &nbsp;
               <span class="input-required" ng-show="nameRequired"> * Required</span>
             </label>
-            <input class="form-control" type="text" maxlength="30" ng-model="customerName" name="name" placeholder="ex. John Doe" required>
+            <input class="form-control" type="text" ng-model="customerName" name="name" placeholder="ex. John Doe" required>
             <small class="text-muted">Maximum 30 characters</small>
           </div>
 
@@ -438,7 +438,7 @@
             <label>Invoice Number &nbsp;
               <span class="input-required" ng-show="invoiceRequired"> * Required</span>
             </label>
-            <input class="form-control" maxlength="10" ng-model="invoiceNumber" type="text" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 34937" name="invoice" required></input>
+            <input class="form-control" ng-model="invoiceNumber" type="text" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 34937" name="invoice" required></input>
             <small class="text-muted">Maximum 10 characters</small>
           </div>
           <div class="col-lg-4">
