--- a/src/views/modals/order-filter.html
+++ b/src/views/modals/order-filter.html
@@ -8,12 +8,12 @@
         <fieldset class="form-group">
           <div class="col-lg-6">
             <label>Customer Name</label>
-            <input class="form-control" type="text" maxlength="30" ng-model="customerName" placeholder="ex. John Doe">
+            <input class="form-control" type="text" ng-model="customerName" placeholder="ex. John Doe">
             <small class="text-muted">[Optional] Maximum 30 characters</small>
           </div>
           <div class="col-lg-6">
             <label>Invoice Number</label>
-            <input class="form-control" maxlength="10" ng-model="invoiceNumber" type="text" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 34937"></input>
+            <input class="form-control" ng-model="invoiceNumber" type="text" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 34937"></input>
             <small class="text-muted">[Optional] Order Invoice </small>
           </div>
         </fieldset>
