--- a/src/views/dashboard.default.orders.menu.html
+++ b/src/views/dashboard.default.orders.menu.html
@@ -133,8 +133,8 @@
             <label>Customer Name &nbsp;
               <span class="input-required" ng-show="nameRequired"> * Required</span>
             </label>
-            <input class="form-control" type="text"  ng-model="customerName" name="name" placeholder="ex. John Doe" required>
-           </div>
+            <input class="form-control" type="text" ng-model="customerName" name="name" placeholder="ex. John Doe" required>
+          </div>
 
           <div class="col-lg-4">
             <label>Company</label>
@@ -155,7 +155,7 @@
               <span class="input-required" ng-show="phoneRequired"> * Required</span>
             </label>
             <input class="form-control" maxlength="10" ng-model="phone" type="text" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 7789195029" name="phone" required>
-           </div>
+          </div>
 
           <div class="col-lg-4">
             <label>Street/Avenue</label>
@@ -185,16 +185,20 @@
             </select>
           </div>
           <div class="col-lg-4">
-            <label>State/Province &nbsp;<span ng-show="stateRequired" class="input-required"> * Required</span></label>
-            <input class="form-control" name="state"  type="text" ng-model="state" placeholder="ex. Michigan" required>
+            <label>State/Province &nbsp;
+              <span ng-show="stateRequired" class="input-required"> * Required</span>
+            </label>
+            <input class="form-control" name="state" type="text" ng-model="state" placeholder="ex. Michigan" required>
             <!-- <small class="text-muted">Maximum 30 characters</small> -->
           </div>
 
         </fieldset>
-        <fieldset>          <div class="col-lg-12">
-                    <label>Notes</label>
-                    <textarea class="form-control" ng-model="notes" type="text" placeholder="ex. Deliver to back door" name="notes"></textarea>
-                </div></fieldset>
+        <fieldset>
+          <div class="col-lg-12">
+            <label>Notes</label>
+            <textarea class="form-control" ng-model="notes" type="text" placeholder="ex. Deliver to back door" name="notes"></textarea>
+          </div>
+        </fieldset>
       </div>
 
 
@@ -205,7 +209,7 @@
               <span class="input-required" ng-show="invoiceRequired"> * Required</span>
             </label>
             <input class="form-control" ng-model="invoiceNumber" type="text" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 34937" name="invoice" required></input>
-           </div>
+          </div>
           <div class="col-lg-4">
             <label>Payment Method
             </label>
@@ -267,15 +271,18 @@
 
 
       <hr class="short">
+      <p class="text-center input-required" ng-show="productRequired">Please fill out the required fields below:</p>
       <div class="table-responsive table-card-responsive">
         <table class="table tableWhite">
           <thead>
             <tr>
-              <th>Product</th>
+              <th>Product <span class="section-required" ng-show="sourcedProductRequired"> * </span></th>
               <th>Finished Good</th>
-              <th>Batch</th>
-              <th>Unit Price<br>($/{{selectedBlock.units}})</th>
-              <th>Quantity<br>(Max: {{selectedBlock.quantity + " " + selectedBlock.units}})</th>
+              <th>Batch <span class="section-required" ng-show="batchRequired"> * </span></th>
+              <th>Unit Price
+                <br>($/{{selectedBlock.units}})<span class="section-required" ng-show="unitPriceRequired"> * </span></th>
+              <th>Quantity
+                <br>(Max: {{selectedBlock.quantity + " " + selectedBlock.units}})<span class="section-required" ng-show="quantityRequired"> * </span></th>
               <th>Tax Rate (%)</th>
               <th>&nbsp;
                 <span class="input-required" ng-show="tableRequired"> *</span>&nbsp;</th>
@@ -295,12 +302,12 @@
 
             </tr>
             <tr>
-                <td data-label="Sourced Product">
-                  <select class="form-control" ng-model="selectedSourcedProduct" ng-options="sourcedProduct.name for sourcedProduct in sourcedProducts"></select>
-                </td>
-
               <td data-label="Product">
-                  <select class="form-control" ng-model="selectedFinishedProduct" ng-options="finishedProduct.name for finishedProduct in finishedProducts" ng-disabled="!selectedSourcedProduct"></select>
+                <select class="form-control" ng-model="selectedSourcedProduct" ng-options="sourcedProduct.name for sourcedProduct in sourcedProducts"></select>
+              </td>
+
+              <td data-label="Finish Type">
+                <select class="form-control" ng-model="selectedFinishedProduct" ng-options="finishedProduct.name for finishedProduct in finishedProducts" ng-disabled="!selectedSourcedProduct"></select>
               </td>
 
               <td data-label="Choose Batch">
@@ -415,16 +422,20 @@
             </select>
           </div>
           <div class="col-lg-4">
-            <label>State/Province &nbsp;<span ng-show="stateRequired" class="input-required"> * Required</span></label>
-            <input class="form-control" name="state"  type="text" ng-model="state" placeholder="ex. Michigan" required>
+            <label>State/Province &nbsp;
+              <span ng-show="stateRequired" class="input-required"> * Required</span>
+            </label>
+            <input class="form-control" name="state" type="text" ng-model="state" placeholder="ex. Michigan" required>
             <!-- <small class="text-muted">Maximum 30 characters</small> -->
           </div>
 
         </fieldset>
-        <fieldset>          <div class="col-lg-12">
-                    <label>Notes</label>
-                    <textarea class="form-control" ng-model="notes" type="text" placeholder="ex. Deliver to back door" name="notes"></textarea>
-                </div></fieldset>
+        <fieldset>
+          <div class="col-lg-12">
+            <label>Notes</label>
+            <textarea class="form-control" ng-model="notes" type="text" placeholder="ex. Deliver to back door" name="notes"></textarea>
+          </div>
+        </fieldset>
       </div>
 
 
@@ -531,10 +542,10 @@
 
       </fieldset>
       <fieldset class="form-group">
-          <div class="col-lg-4">
-            <label>Invoice Number</label>
-            <input class="form-control" ng-model="invoiceNumber" type="text" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 34937"></input>
-          </div>
+        <div class="col-lg-4">
+          <label>Invoice Number</label>
+          <input class="form-control" ng-model="invoiceNumber" type="text" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 34937"></input>
+        </div>
         <div class="col-lg-4">
           <label>Payment Method</label>
           <select ng-model="paymentMethod" class="form-control">
@@ -557,10 +568,10 @@
 
       </fieldset>
       <fieldset class="form-group">
-          <div class="col-lg-6">
-            <label>Date Range - From:</label>
-            <input class="form-control" type="date" ng-model="dateStart" placeholder="2016-01-12">
-          </div>
+        <div class="col-lg-6">
+          <label>Date Range - From:</label>
+          <input class="form-control" type="date" ng-model="dateStart" placeholder="2016-01-12">
+        </div>
         <div class="col-lg-6">
           <label>Date Range - To:</label>
           <input class="form-control" type="date" ng-model="dateEnd" placeholder="2016-01-14">
