--- a/src/views/dashboard.default.customers.menu.html
+++ b/src/views/dashboard.default.customers.menu.html
@@ -69,14 +69,14 @@
         </div>
         <div class="col-lg-6">
           <label>Email &nbsp;<span ng-show="emailRequired" class="input-required"> * Required</span></label>
-          <input class="form-control" type="email" ng-model="email" name="email" placeholder="ex. john.doe@example.com" required>
+          <input class="form-control" type="email" ng-model="email" name="email" placeholder="ex. john.doe@example.com">
           <!-- <small class="text-muted">Maximum 30 characters</small> -->
         </div>
       </fieldset>
       <fieldset class="form-group">
         <div class="col-lg-6">
-          <label>Company </label>
-          <input class="form-control" type="text" ng-model="company" name="company" placeholder="ex. Mark's Market">
+          <label>Company &nbsp;<span ng-show="companyRequired" class="input-required"> * Required</span></label>
+          <input class="form-control" type="text" ng-model="company" name="company" placeholder="ex. Mark's Market" required>
           <!-- <small class="text-muted">Maximum 30 characters</small> -->
         </div>
         <div class="col-lg-6">
