--- a/src/views/dashboard.default.customers.menu.html
+++ b/src/views/dashboard.default.customers.menu.html
@@ -40,9 +40,9 @@
                   </tbody>
                 </table>
               </div>
-              <!-- <ul class="pagination pagination-md">
+              <ul class="pagination pagination-md">
                 <li ng-repeat="page in paginationArray track by $index" ng-class="{active:pageIndex==$index}"><a href="javascript:void()" ng-click="setPageIndex($index)">{{$index + 1}}</a></li>
-              </ul> -->
+              </ul>
             </div>
           </div>
         </div>
