--- a/src/views/dashboard.default.orders.menu.html
+++ b/src/views/dashboard.default.orders.menu.html
@@ -332,7 +332,7 @@
             </tr>
           </tbody>
         </table>
-        <h3 class="text-right">Total: ${{getTotal()}}</h3>
+        <h3 class="text-right">Total: ${{total}}</h3>
       </div>
 
     </form>
