--- a/src/views/dashboard.default.products.html
+++ b/src/views/dashboard.default.products.html
@@ -130,27 +130,15 @@
           <label>Product Name &nbsp;
             <span ng-show="productRequired" class="input-required"> * Required</span>
           </label>
-          <input class="form-control" name="name" ng-model="name"  placeholder="ex. Atlantic Cod" required='true'>
-          <small class="text-muted">Please enter the product name.</small>
+          <input class="form-control" name="name" ng-model="name"  placeholder="ex. Coho Salmon Filleted" required='true'>
+          <small class="text-muted">Please enter the full finished good type  name.</small>
         </div>
-
       </fieldset>
-      <!-- <fieldset class="form-group">
-        <div class="col-lg-12">
-          <label>Attach Product Photo</label>
-          <input class="form-control" type="file" ngf-select ng-model="file" name="file">
-          <small class="text-muted">PNG and JPG files only</small>
-          <div class="button" ngf-select ng-model="file" name="file" ngf-pattern="'image/*'" ngf-accept="'image/*'" ngf-max-size="20MB" ngf-min-height="100" ngf-resize="{width: 100, height: 100}">
-          </div>
-        </div>
-
-      </fieldset> -->
 
       <fieldset class="form-group">
         <div class="col-lg-12">
           <label>Description</label>
           <input class="form-control" ng-model="description" placeholder="Enter a short product description">
-          <small class="text-muted">Maximum 45 characters</small>
         </div>
       </fieldset>
 
@@ -158,7 +146,6 @@
         <div class="col-lg-12">
           <label>Product Number</label>
           <input class="form-control" ng-model="finishedProductNumber"  placeholder="Custom product number (ex. UPC, SKU)">
-          <small class="text-muted">Maximum 45 characters</small>
         </div>
       </fieldset>
     </form>
