--- a/src/views/dashboard.help.html
+++ b/src/views/dashboard.help.html
@@ -8,7 +8,8 @@
             <div class="panel-setting-heading">
               <h1>Coastline Quick Start Guide</h1>
               <br>
-              <a class="btn-status-success btn-size-large" target="_self" href="https://s3.amazonaws.com/coastline-us/coastline-guide-1.pdf" download="coastline-guide.pdf">PDF Guide Download</a>
+              <a class="btn-status-success btn-size-large" target="_self" href="
+https://s3.amazonaws.com/coastline-us/Coastline+Platform+User+Guide+(updated+21.04.2016).pdf" download="coastline-guide.pdf">PDF Guide Download</a>
               <br><br>
               <hr class="short">
             </div>
