--- a/src/views/dashboard.default.supply-chain.create.html
+++ b/src/views/dashboard.default.supply-chain.create.html
@@ -16,6 +16,7 @@
                   </div>
                 </fieldset>
                 <button ng-disabled="isSubmitButtonDisabled()" type="submit" class="btn-status-success">Submit</button>
+                <button ui-sref="dashboard.default.supply-chain.menu" type="submit" class="btn-status-danger">Cancel</button>
                 <br>
               </form>
             </div>
