--- a/src/views/dashboard.default.supply-chain.menu.html
+++ b/src/views/dashboard.default.supply-chain.menu.html
@@ -10,6 +10,7 @@
               <button ng-click="createNewSupplyChain()" class="btn-status-success">Add</button>
               <button ng-click="editSupplyChain(selectedSupplyChain)" class="btn-status-default">Edit</button>
               <button ng-click="renameSupplyChain(selectedSupplyChain)" class="btn-status-default">Rename</button>
+              <button ng-click="deleteSupplyChain(selectedSupplyChain)" class="btn-status-danger">Delete</button>
             </div>
           </div>
         </div>
@@ -22,8 +23,9 @@
                     <tr>
                       <th>Select</th>
                       <th>Name</th>
-                      <th>Date Created</th>
-                      <!-- <th></th> -->
+                      <!-- <th>Date Created</th> -->
+                      <th></th>
+                      <th></th>
                     </tr>
                   </thead>
                   <tbody>
@@ -32,7 +34,9 @@
                         <input type="radio" ng-model="$parent.selectedSupplyChain" ng-value="$index">
                       </td>
                       <td data-label="Name">{{supplyChain.name}}</td>
-                      <td data-label="Date Created">{{supplyChain.dateCreated | date: 'short'}}</td>
+                      <td></td>
+                      <td></td>
+                      <!-- <td data-label="Date Created">{{supplyChain.dateCreated | date: 'short'}}</td> -->
                       <!-- <td data-label="Details">
                         <button ng-click="editSupplyChain(supplyChain)" class="btn-status-default">View/Edit</button>
                       </td> -->
@@ -47,6 +51,20 @@
     </div>
   </div>
 </div>
+
+<!-- DELETE BATCH MODAL-->
+<script type="text/ng-template" id="deleteSupplyChain.html">
+  <div class="modal-header">
+    <h3 class="modal-title text-center">Delete Supply Chain</h3>
+  </div>
+  <div class="modal-body">
+    <p>Are you sure you want to delete this supply chain?</p>
+  </div>
+  <div class="modal-footer">
+    <button class="btn-status-success" type="button" ng-click="ok()">Yes</button>
+    <button class="btn-status-danger" type="button" ng-click="cancel()">Cancel</button>
+  </div>
+</script>
 
 
 <!-- EDIT SUPPLY CHAIN STAGE MODAL -->
