help page revamped with separate vids

--- a/src/views/dashboard.html
+++ b/src/views/dashboard.html
@@ -23,7 +23,7 @@
           <li class="hide"><a ui-sref=".default.customers.menu">Customers</a></li>
 
           <li><a ui-sref=".settings.general">Settings</a></li>
-          <li><a ui-sref=".help">Help</a></li>
+          <li><a ui-sref=".help.overview">Help</a></li>
           <li><a ng-click="logout()" href="#">Logout</a></li>
         </ul>
       </div>
