--- a/src/css/components/_table.scss
+++ b/src/css/components/_table.scss
@@ -13,6 +13,7 @@ table.tableWhite {
     background-color: $primary-background-color;
     vertical-align: middle;
     border-radius: 0;
+    font-weight: 400;
   }
   td {
     vertical-align: bottom;
