--- a/src/views/dashboard.default.html
+++ b/src/views/dashboard.default.html
@@ -1,7 +1,7 @@
 <div class="col-sm-3 col-md-2 sidebar">
     <ul ng-controller="SideNavCtrl" class="nav nav-sidebar">
-        <li><div class="sidebar-border"><h1>
-          <!--<input class="form-control search-side-nav" type="text" maxlength="15"  placeholder="Search"></input>-->
+        <li>
+          <div class="sidebar-border"><h1>
           Navigation
         </h1></li>
         <li><a ng-class="{activeTab: state.includes('dashboard.default.overview')}" ui-sref=".overview">Overview</a></li>
