--- a/src/views/dashboard.default.supply-chain.menu.html
+++ b/src/views/dashboard.default.supply-chain.menu.html
@@ -70,7 +70,7 @@
 <!-- EDIT SUPPLY CHAIN STAGE MODAL -->
 <script type="text/ng-template" id="renameSupplyChain.html">
   <div class="modal-header">
-    <h3 class="modal-title">Edit Supply Chain Name</h3>
+    <h3 class="modal-title text-center">Edit Supply Chain Name</h3>
   </div>
   <div class="modal-body">
     <form>
