--- a/src/views/dashboard.help.catch-history.html
+++ b/src/views/dashboard.help.catch-history.html
@@ -14,7 +14,7 @@
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/b9-tu_v0sXI?rel=0" frameborder="0" allowfullscreen></iframe>
               </div>
               <div class="col-lg-6">
-                <h4 align="left">Please refer to this video for a demonstration on how to track your seafood batch history.
+                <h4>Please refer to this video for a demonstration on how to track your seafood batch history.
               </div>
             </div>
           </div>
