--- a/src/views/dashboard.help.html
+++ b/src/views/dashboard.help.html
@@ -9,9 +9,8 @@
         <li><a ng-class="{activeTab: state.includes('dashboard.help.supply-chain')}" ui-sref=".supply-chain">Supply Chain</a></li>
         <li><a ng-class="{activeTab: state.includes('dashboard.help.inventory')}" ui-sref=".inventory">Inventory</a></li>
         <li><a ng-class="{activeTab: state.includes('dashboard.help.orders-invoices')}" ui-sref=".orders-invoices">Orders</a></li>
-        <li><a ng-class="{activeTab: state.includes('dashboard.help.customers')}" ui-sref=".customer">Customers</a></li>
+        <li><a ng-class="{activeTab: state.includes('dashboard.help.customer')}" ui-sref=".customer">Customers</a></li>
         <li><a ng-class="{activeTab: state.includes('dashboard.help.catch-history')}" ui-sref=".catch-history">Catch History</a></li>
-
     </ul>
 </div>
 
