--- a/src/views/dashboard.help.inventory.html
+++ b/src/views/dashboard.help.inventory.html
@@ -14,7 +14,7 @@
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/nbjY4xEm8-k?rel=0" frameborder="0" allowfullscreen></iframe>
               </div>
               <div class="col-lg-6">
-                <h4 align="left">Please refer to this video for a demonstration on how to add an inventory batch.
+                <h4>Please refer to this video for a demonstration on how to add an inventory batch.
               </div>
             </div>
             <hr class="short">
@@ -26,7 +26,7 @@
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/69UXciBY2gA?rel=0" frameborder="0" allowfullscreen></iframe>
               </div>
               <div class="col-lg-6">
-                <h4 align="left">Please refer to this video for a demonstration on how to move your inventory batches.
+                <h4>Please refer to this video for a demonstration on how to move your inventory batches.
               </div>
             </div>
           </div>
