--- a/src/views/dashboard.help.orders-invoices.html
+++ b/src/views/dashboard.help.orders-invoices.html
@@ -14,7 +14,7 @@
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/cQ4Pl2Bwm9M?rel=0" frameborder="0" allowfullscreen></iframe>
               </div>
               <div class="col-lg-6">
-                <h4 align="left">Please refer to this video for a demonstration on how to add a customer order and auto-generate an invoice.
+                <h4>Please refer to this video for a demonstration on how to add a customer order and auto-generate an invoice.
               </div>
             </div>
             <hr class="short">
@@ -26,7 +26,7 @@
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/qKshU95nXkw?rel=0" frameborder="0" allowfullscreen></iframe>
               </div>
               <div class="col-lg-6">
-                <h4 align="left">Please refer to this video for a demonstration on how to manage your orders and export invoices and sales data to Excel or PDF.
+                <h4>Please refer to this video for a demonstration on how to manage your orders and export invoices and sales data to Excel or PDF.
               </div>
             </div>
           </div>
