--- a/src/css/components/_panel.scss
+++ b/src/css/components/_panel.scss
@@ -19,11 +19,14 @@
   background-color: $secondary-background-color;
   border-color: $primary-border-color;
   border-radius: 3px;
-
   .panel-setting-heading {
-    font-size: 18px;
+    h1 {
+      font-weight: 300;
+    }
+  }
+
+  h3, h4 {
     font-weight: 300;
-    letter-spacing: 0.025em;
   }
 }
 
@@ -62,6 +65,10 @@
 .panel-setting {
   padding-top:50px;
   padding-bottom:20px;
+
+  label {
+    font-weight: 400;
+  }
 }
 
 .panel-login {
