--- a/src/views/dashboard.default.customers.menu.html
+++ b/src/views/dashboard.default.customers.menu.html
@@ -181,7 +181,7 @@
 <!-- DELETE ORDER MODAL-->
 <script type="text/ng-template" id="deleteCustomerModal.html">
   <div class="modal-header">
-    <h3 class="modal-title">Delete Product</h3>
+    <h3 class="modal-title text-center">Delete Product</h3>
   </div>
   <div class="modal-body">
     <p>Are you sure you want to delete this customer?
