--- a/src/views/dashboard.default.orders.menu.html
+++ b/src/views/dashboard.default.orders.menu.html
@@ -62,7 +62,7 @@
 <!-- VIEW ORDER DETAIL MODAL-->
 <script type="text/ng-template" id="viewOrderDetailModal.html">
   <div class="modal-header">
-    <h3 class="modal-title">Customer Order #{{order.invoiceNumber}}</h3>
+    <h3 class="modal-title text-center">Customer Order #{{order.invoiceNumber}}</h3>
   </div>
 
   <div class="modal-body">
@@ -526,7 +526,7 @@
 <!-- FILTER ORDERS MODAL-->
 <script type="text/ng-template" id="views/modals/order-filter.html">
   <div class="modal-header">
-    <h3 class="modal-title">Filter Order Criteria</h3>
+    <h3 class="modal-title text-center">Filter Order Criteria</h3>
   </div>
   <div class="modal-body">
     <form>
@@ -589,7 +589,7 @@
 <!-- DELETE ORDER MODAL-->
 <script type="text/ng-template" id="deleteOrderModal.html">
   <div class="modal-header">
-    <h3 class="modal-title">Delete Product</h3>
+    <h3 class="modal-title text-center">Delete Product</h3>
   </div>
   <div class="modal-body">
     <p>Are you sure you want to delete this order?
@@ -606,7 +606,7 @@
 <!-- CUSTOMER AUTOFILL MODAL-->
 <script type="text/ng-template" id="loadCustomerModal.html">
   <div class="modal-header">
-    <h3 class="modal-title">Choose Existing Customer</h3>
+    <h3 class="modal-title text-center">Choose Existing Customer</h3>
   </div>
   <div class="modal-body">
     <div class="panel-scroll">
