--- a/src/views/dashboard.default.products.html
+++ b/src/views/dashboard.default.products.html
@@ -8,7 +8,7 @@
             <div class="panel panel-default">
               <div class="panel-body">
                 <button ng-click="addProduct()" class="btn-status-success">Add</button>
-                <!-- <button ng-click="editProduct()" class="btn-status-default">Edit</button> -->
+                <button ng-click="editProduct()" class="btn-status-default">Edit</button>
                 <button ng-click="deleteProduct(sourcedProduct._id)" class="btn-status-danger">Delete</button>
               </div>
             </div>
@@ -72,7 +72,7 @@
                     <input type="radio" ng-model="$parent.selectedFinishedProduct" ng-value="$parent.finishedProducts[$index]">
                   </td> -->
                   <td data-label="Name">&nbsp; {{finishedProducts[$index].name}}</td>
-                  <td>&nbsp; <button class="btn-table-danger align-right" ng-click="removeFinishedProduct($index)"><i class="fa fa-minus"></i></button></td>
+                  <td><button class="btn-table-danger align-right" ng-click="removeFinishedProduct($index)"><i class="fa fa-minus"></i></button></td>
                 </tr>
                 <tr>
                   <!-- <td>&nbsp;</td> -->
@@ -84,22 +84,62 @@
               </tbody>
             </table>
           </div>
-
         </div>
-
-
       </fieldset>
-      <!-- <fieldset class="form-group">
+      <fieldset class="form-group">
         <div class="col-lg-6">
-          <label>Attach Product Photo</label>
-          <input class="form-control" type="file" ngf-select ng-model="file" name="file">
-          <small class="text-muted">PNG and JPG files only</small>
-          <div class="button" ngf-select ng-model="file" name="file" ngf-pattern="'image/*'" ngf-accept="'image/*'" ngf-max-size="20MB" ngf-min-height="100" ngf-resize="{width: 100, height: 100}">
+          <label>Description</label>
+          <input class="form-control" ng-model="description" placeholder="Enter a short product description">
+          <small class="text-muted">Maximum 45 characters</small>
+        </div>
+      </fieldset>
+    </form>
+  </div>
+  <div class="modal-footer">
+    <div class="alignright">
+      <button type="submit" class="btn-status-success" ng-click="ok()">Submit</button>
+      <button class="btn-status-danger" type="button" ng-click="cancel()">Cancel</button>
+    </div>
+  </div>
+</script>
+
+<!-- EDIT SOURCED PRODUCT MODAL-->
+<script type="text/ng-template" id="editProductModal.html">
+  <div class="modal-header">
+    <h3 class="modal-title text-center">Add a Product</h3>
+  </div>
+  <div class="modal-body">
+    <form name="addProductForm" ng-init="item=0">
+      <fieldset class="form-group">
+        <div class="col-lg-6">
+          <label>Product Name &nbsp;
+            <span ng-show="productRequired" class="input-required"> * Required</span>
+          </label>
+          <input class="form-control" name="name" ng-model="name" placeholder="ex. Atlantic Cod">
+          <small class="text-muted">Please enter the product name.</small>
+        </div>
+        <div class="col-lg-6">
+          <!-- <div class="panel-scroll"> -->
+          <label>Associated Finished Goods</label>
+
+          <div class="table-responsive">
+            <table class="table tableWhite">
+              <tbody>
+                <tr ng-repeat="finishedProduct in finishedProducts track by $index">
+                  <td data-label="Name">&nbsp; {{finishedProducts[$index].name}}</td>
+                  <td><button class="btn-table-danger align-right" ng-click="removeFinishedProduct($index)"><i class="fa fa-minus"></i></button><a class='table-edit align-right' ng-click="addFinishedProduct()">Edit&nbsp;&nbsp;</a></td>
+                </tr>
+                <tr>
+                  <td>&nbsp;</td>
+                <td class ="table-button-wrapper">&nbsp;
+                  <button class="btn-table-success align-right" ng-click="addFinishedProduct()"><i class="fa fa-plus"></i></button>
+                </td>
+              </tr>
+              </tbody>
+            </table>
           </div>
         </div>
-
-      </fieldset> -->
-
+      </fieldset>
       <fieldset class="form-group">
         <div class="col-lg-6">
           <label>Description</label>
@@ -134,15 +174,6 @@
           <small class="text-muted">Please enter the full finished good type  name.</small>
         </div>
       </fieldset>
-      <!-- <fieldset class="form-group">
-        <div class="col-lg-12">
-          <label>Attach Product Photo</label>
-          <input class="form-control" type="file" ngf-select ng-model="file" name="file">
-          <small class="text-muted">PNG and JPG files only</small>
-          <div class="button" ngf-select ng-model="file" name="file" ngf-pattern="'image/*'" ngf-accept="'image/*'" ngf-max-size="20MB" ngf-min-height="100" ngf-resize="{width: 100, height: 100}">
-          </div>
-        </div>
-      </fieldset> -->
 
       <fieldset class="form-group">
         <div class="col-lg-12">
@@ -168,16 +199,17 @@
 </script>
 
 
-<!-- EDIT PRODUCT MODAL-->
-<script type="text/ng-template" id="editProductModal.html">
+
+<!-- EDIT FINISHED GOOD MODAL-->
+<script type="text/ng-template" id="editFinishedGoodModal.html">
   <div class="modal-header">
-    <h3 class="modal-title text-center">Edit {{name}}</h3>
+    <h3 class="modal-title text-center">Add Finished Good</h3>
   </div>
   <div class="modal-body">
     <form>
       <fieldset class="form-group">
         <div class="col-lg-6">
-          <label>Product Name</label>
+          <label>UPC Code</label>
           <input class="form-control" ng-model="name" placeholder="ex. Atlantic Cod">
           <small class="text-muted">Maximum 25 characters.</small>
         </div>
@@ -221,7 +253,6 @@
     </div>
   </div>
 </script>
-
 
 <!-- ADD FINISHED GOOD MODAL-->
 <script type="text/ng-template" id="addFinishedGoodModal.html">
@@ -281,7 +312,7 @@
 <!-- DELETE PRODUCT MODAL-->
 <script type="text/ng-template" id="deleteProductModal.html">
   <div class="modal-header">
-    <h3 class="modal-title">Delete Product</h3>
+    <h3 class="modal-title text-center">Delete Product</h3>
   </div>
   <div class="modal-body">
     <p>Are you sure you want to delete this product?</p>
