--- a/src/views/dashboard.default.sales-management.track.html
+++ b/src/views/dashboard.default.sales-management.track.html
@@ -52,7 +52,7 @@
 <!-- ADD SELLING POINT MODAL -->
 <script type="text/ng-template" id="addSellingPointModal.html">
   <div class="modal-header">
-    <h3 class="modal-title">Add a Selling Point</h3>
+    <h3 class="modal-title text-center">Add a Selling Point</h3>
   </div>
   <div class="modal-body">
     <form>
@@ -78,7 +78,7 @@
 <!-- EDIT SELLING POINT MODAL -->
 <script type="text/ng-template" id="editSellingPointModal.html">
   <div class="modal-header">
-    <h3 class="modal-title">Edit Selling Point</h3>
+    <h3 class="modal-title text-center">Edit Selling Point</h3>
   </div>
   <div class="modal-body">
     <form>
@@ -103,7 +103,7 @@
 <!-- VIEW INVENTORY IN SELLING POINT MODAL -->
 <script type="text/ng-template" id="viewSellingPointBlocksModal.html">
   <div class="modal-header">
-    <h3 class="modal-title">Inventory in {{stageName}}</h3>
+    <h3 class="modal-title text-center">Inventory in {{stageName}}</h3>
   </div>
   <div class="modal-footer">
     <button class="btn-status-default" type="button" ng-disabled="blocks.length==0" ng-click="moveBlock()">Move</button>
@@ -147,7 +147,7 @@
 <!-- MOVE INVENTORY IN SELLING POINT MODAL -->
 <script type="text/ng-template" id="moveBlockModal.html">
   <div class="modal-header">
-    <h3 class="modal-title">Move Inventory Batch</h3>
+    <h3 class="modal-title text-center">Move Inventory Batch</h3>
   </div>
   <div class="modal-body">
     <form>
@@ -185,7 +185,7 @@
 <!-- DELETE INVENTORY IN SELLING POINT MODAL -->
 <script type="text/ng-template" id="deleteBlockModal.html">
   <div class="modal-header">
-    <h3 class="modal-title">Delete Batch</h3>
+    <h3 class="modal-title text-center">Delete Batch</h3>
   </div>
   <div class="modal-body">
     <p>Are you sure you want to delete this batch?</p>
@@ -200,7 +200,7 @@
 <!-- VIEW INVENTORY BATCH DETAILS IN SELLING POINT MODAL -->
 <script type="text/ng-template" id="viewDetailsModal.html">
   <div class="modal-header">
-    <h3 class="modal-title">Inventory Batch Details</h3>
+    <h3 class="modal-title text-center">Inventory Batch Details</h3>
   </div>
 
   <div class="modal-body">
