--- a/src/views/dashboard.help.overview.html
+++ b/src/views/dashboard.help.overview.html
@@ -17,7 +17,7 @@
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/picuG_92HoQ?rel=0" frameborder="0" allowfullscreen></iframe>
               </div>
               <div class="col-lg-6">
-                <h4 align="left">Please refer to this video for a brief overview of the Coastline platform.
+                <h4>Please refer to this video for a brief overview of the Coastline platform.
                   <br>
                   <br> For the detailed instruction guide (with step by step videos), please click the relevant tabs on the left navigation bar.
                        A comprehensive paper guide can also be downloaded by clicking the green "PDF Guide Download" button above.</h4>
