--- a/src/views/dashboard.help.product.html
+++ b/src/views/dashboard.help.product.html
@@ -14,7 +14,7 @@
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/gZc3pfHLUIE?rel=0" frameborder="0" allowfullscreen></iframe>
               </div>
               <div class="col-lg-6">
-                <h4 align="left">Please refer to this video for a demonstration on how to add a seafood product.
+                <h4>Please refer to this video for a demonstration on how to add a seafood product.
               </div>
             </div>
           </div>
