--- a/src/views/dashboard.settings.users.html
+++ b/src/views/dashboard.settings.users.html
@@ -50,7 +50,7 @@
 
 <script type="text/ng-template" id="inviteUser.html">
   <div class="modal-header">
-    <h3 class="modal-title">Add user to fishery</h3>
+    <h3 class="modal-title text-center">Add user to fishery</h3>
   </div>
   <div class="modal-body">
     <form>
